syntax = "proto3";

package product;

option go_package = "./internal/pb";

service ProductService {
  rpc FindAll(FindAllRequest) returns (FindAllResponse) {}
  rpc FindById(FindByIdRequest) returns (FindByIdResponse) {}
  rpc Save(SaveRequest) returns (SaveResponse) {}
  rpc SaveAll(SaveAllRequest) returns (SaveAllResponse) {}
  rpc Update(UpdateRequest) returns (StatusResponse) {}
  rpc Delete(DeleteRequest) returns (StatusResponse) {}
}

message FindAllRequest {
  uint32 Limit=1;
  uint32 Offset=2;
}

message FindAllResponse {
  repeated ProductDto products=1;
  string error=2;
}

message FindByIdRequest {
  uint32 Id=1;
}

message FindByIdResponse {
  ProductDto product=1;
  string error=2;
}

message SaveRequest {
  ProductDto product=1;
}

message SaveResponse {
  string status=1;
  string error=2;
}

message SaveAllRequest {
  repeated ProductDto products=1;
}

message SaveAllResponse {
  string status=1;
  string error=2;
}

message UpdateRequest {
  uint32 Id=1;
  ProductDto product=2;
}

message StatusResponse {
  string status=1;
  string error=2;
}

message DeleteRequest {
  uint32 Id=1;
}

message ProductDto {
  uint32 Id=1;
  string Name=2;
  string Intro=3;
  string Description=4;
  uint32 CategoryId=5;
  string Category=6;
  double OriginalPrice=7;
  double SellingPrice=8;
  bool IsSale=9;
  bool IsDeleted=10;
  int64 CreatedAt=11;
  int64 UpdatedAt=12;
}